fixing the alignment of texts

--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center
 }
-h2 {
+.sub-heading {
     color: #000080;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center
